push it...push push push it...

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 				<a href="contact.html">CONTACT US</a>
 			</nav>
 		</section>
-		<section class="gallery">
-			
-		</section>
-		<section class="marketing">
-			
-		</section>
-		<section class="map">
-			
-		</section>
+		<section class="main_content">
+			<section class="gallery">
+				<p>images here</p>
+			</section>
+			<section class="marketing">
+				<p>text here</p>
+			</section>
+			<section class="map">
+				<p>map here</p>
+			</section>
+		</section>	
 		<footer>
 			<span>&copy;Josh & Kevin</span>
 		</footer>
