--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,77 @@
 				<a href="about.html">ABOUT US</a>
 				<a href="contact.html">CONTACT US</a>
 			</nav>
-		</section>		
+		</section>
+		<section>
+			<section>
+				<h1>Contact Us</h1>
+				<section>
+					<h2>Please</h2>
+					<span>leave us your information so we can get back to you!</span>
+					<ul>
+						<li>
+							Name: <input>
+						</li>
+						<li>
+							Email: <input>
+						</li>
+						<li>
+							Phone Number: <input>
+						</li>
+						<li>
+							Street Adress: <input>
+						</li>
+						<li>
+							City: <input>
+						</li>
+						<li>
+							State: <input>
+						</li>
+						<li>
+							Zip Code: <input>
+						</li>
+						<li>
+							Message for us: <input>
+						</li>
+					</ul>
+				</section>
+				<h1>Or</h1>
+				<section>
+					<h2>Here's Our Info</h2>
+					<ul>
+						<li>
+							Email: ouremail.com
+						</li>
+						<li>
+							Phone Number: 435-999-4354
+						</li>
+						<li>
+							Street Adress: Las Vegas
+						</li>
+						<li>
+							City: Nevada
+						</li>
+						<li>
+							State: 435 N Main St.
+						</li>
+						<li>
+							Zip Code: 43525
+						</li>
+					</ul>
+				</section>
+			</section>
+			<aside>
+				<h1>Hot Deals</h1>
+				<section>
+					<a href="#"><img src="#"></a>
+					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+				</section>
+				<section>
+					<a href="#"><img src="#"></a>
+					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+				</section>
+			</aside>
+		</section>
 		<footer>
 			<span>&copy;Josh & Kevin</span>
 		</footer>
