--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 				<a href="contact.html">CONTACT US</a>
 			</nav>
 		</section>
-		<section>
+		<section class="main_content">
 			<section>
 				<h1>Contact Us</h1>
 				<section>
