--- a/about.html
+++ b/about.html
@@ -20,6 +20,28 @@
 				<a href="contact.html">CONTACT US</a>
 			</nav>
 		</section>
+		<section class="main_content">
+			<section>
+				<h1>Contact Us</h1>
+				<section>
+					<img src="#"/>
+					<p>Information about Josh<br>... ... ... ...</p>
+				</section>
+				<section>
+					<img src="#"/>
+					<p>Information about Kevin(who is way cooler)<br>... ... ... ...</p>
+				</section>
+			</section>
+			<aside>
+				<h1>Testimonials</h1>
+					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
+
+					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
+					
+					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
+
+			</aside>
+		</section>
 		<footer>
 			<span>&copy;Josh & Kevin</span>
 		</footer>
