--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 				<h1>Contact Us</h1>
 				<section>
 					<h2>Please</h2>
-					<span>leave us your information so we can get back to you!</span>
-					<ul>
+					<span>Leave us your information so we can get back to you!</span>
+					<ul class="form">
 						<li>
 							Name: <input>
 						</li>
@@ -62,12 +62,19 @@
 						<li>
 							Message for us: <input>
 						</li>
+						<li>
+							<input type="button" value="submit"/>
+						</li>
 					</ul>
 				</section>
-				<h1>Or</h1>
 				<section>
-					<h2>Here's Our Info</h2>
 					<ul>
+						<li>
+							<h1>- Or -</h1>
+						</li>
+						<li>
+							<h2>Here's Our Info</h2>
+						</li>
 						<li>
 							Email: ouremail.com
 						</li>
