--- a/about.html
+++ b/about.html
@@ -21,17 +21,6 @@
 			</nav>
 		</section>
 		<section class="main_content">
-			<section>
-				<h1>Contact Us</h1>
-				<section>
-					<img src="#"/>
-					<p>Information about Josh<br>... ... ... ...</p>
-				</section>
-				<section>
-					<img src="#"/>
-					<p>Information about Kevin(who is way cooler)<br>... ... ... ...</p>
-				</section>
-			</section>
 			<aside>
 				<h1>Testimonials</h1>
 					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
@@ -41,6 +30,17 @@
 					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
 
 			</aside>
+			<section>
+				<h1>Contact Us</h1>
+				<section>
+					<img src="#"/>
+					<p>Information about Josh<br>... ... ... ...</p>
+				</section>
+				<section>
+					<img src="#"/>
+					<p>Information about Kevin<br>"_______ is hard."</p>
+				</section>
+			</section>
 		</section>
 		<footer>
 			<span>&copy;Josh & Kevin</span>
