--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 		</section>
 		<section class="main_content">
 			<section class="gallery">
-				<p>images here</p>
+				<ul>
+					<li><img src="assets/images/awesome_car.jpg"/></li>
+					<li><img src="assets/images/awesome_car2.jpg"/></li>
+					<li><img src="assets/images/awesome_car.jpg"/></li>
+					<li><img src="assets/images/awesome_car2.jpg"/></li>
+					<li><img src="assets/images/awesome_car.jpg"/></li>
+				</ul>
 			</section>
 			<section class="marketing">
 				<p>text here</p>
