--- a/catalog.html
+++ b/catalog.html
@@ -19,6 +19,62 @@
 				<a href="about.html">ABOUT US</a>
 				<a href="contact.html">CONTACT US</a>
 			</nav>
+		</section>
+		<section class="main_content">
+			<aside>
+				<h1>Hot Deals</h1>
+				<section>
+					<a href="#"><img src="#"></a>
+					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+				</section>
+				<section>
+					<a href="#"><img src="#"></a>
+					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+				</section>
+			</aside>
+			<section>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+				<article>
+					<a href="#"><img src="#"/></a>
+					<h3>Year Make Model Price</h3>
+				</article>
+			</section>
+			
 		</section>		
 		<footer>
 			<span>&copy;Josh & Kevin</span>
