--- a/details.html
+++ b/details.html
@@ -10,7 +10,12 @@
 		<header>
 			
 		</header>
-		
+		<section>
+			<img src="#"/>
+			<h1>Car Name</h1>
+			<p>paragraph to the right of the picture.</p>
+			<p>paragraph underneath the picture and other paragraph</p>
+		</section>
 		<footer>
 			<span>&copy;Josh & Kevin</span>
 		</footer>
