--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
 		<script src="assets/js/jquery-2.1.0.js"></script>
 		<script src="assets/js/scripts.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/catalog.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<header>
