--- a/catalog.html
+++ b/catalog.html
@@ -35,43 +35,43 @@
 			</aside>
 			<section>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/69corvettestingray.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/69dodgecharger.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/2013-sema-cruise-friday-night-70-ford-tonka-truck-.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/2013-srt-viper-300x250.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/2015-Acura-NSX-1024x657-300x200.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/2015lexuslfa.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/2015-Nissan-GT-R-Nismo-300x200.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/M1A2-2-300x300.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/Mazda-RX71999.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="#"><img src="#"/></a>
+					<a href="details.html"><img src="assets/images/CarPictures/Nissan370.jpg"/></a>
 					<h3>Year Make Model Price</h3>
 				</article>
 			</section>
