--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
 			<section>
 				<h1>Contact Us</h1>
 				<section>
-					<img src="#"/>
-					<p>Information about Josh<br>... ... ... ...</p>
+					<img src="assets/images/josh.jpg"/>
+					<p>Information about Josh<br>Pure unadulterated awesome.</p>
 				</section>
 				<section>
 					<img src="#"/>
