--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
 
 			</aside>
-			<section>
+			<section class="us">
 				<h1>Contact Us</h1>
 				<section>
 					<img src="assets/images/josh.jpg"/>
