this one time, at band camp...

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 					<p>Information about Josh<br>Pure unadulterated awesome.</p>
 				</section>
 				<section>
-					<img src="#"/>
+					<img src="assets/images/kevin.gif"/>
 					<p>Information about Kevin<br>"_______ is hard."</p>
 				</section>
 			</section>
