IT'S CLOBBERIN TIME!

--- a/about.html
+++ b/about.html
@@ -30,15 +30,17 @@
 					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
 
 			</aside>
+			<h1>About Us</h1>
 			<section class="us">
-				<h1>Contact Us</h1>
 				<section>
-					<img src="assets/images/josh.jpg"/>
-					<p>Information about Josh<br>Pure unadulterated awesome.</p>
+					<h2>Josh</h2>
+					<img src="assets/images/josh2.jpg"/>
+					<span>ELLINGTON SMASH!!!</span>
 				</section>
 				<section>
+					<h2>Kevin</h2>
 					<img src="assets/images/kevin.gif"/>
-					<p>Information about Kevin<br>"_______ is hard."</p>
+					<span>"_______ is hard."</span>
 				</section>
 			</section>
 		</section>
