--- a/about.html
+++ b/about.html
@@ -23,15 +23,15 @@
 		<section class="main_content">
 			<aside>
 				<h1>Testimonials</h1>
-					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
+					<p>"Ese vato, estos autos son chevres." <br />- Alberto Einsteinez</p>
 
-					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
+					<p>"I like cars...like 'em a lot!" <br />- Steve</p>
 					
-					<p>"This is theeee sweetest car in the universe" - Alberto Einstein</p>
+					<p>"Thanks to jk, I don't have to live in a van down by the river!" <br />- Chris Farley</p>
 
 			</aside>
-			<h1>About Us</h1>
 			<section class="us">
+				<h1>About Us</h1>
 				<section>
 					<h2>Josh</h2>
 					<img src="assets/images/josh2.jpg"/>
