--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Home</title>
 		<script src="assets/js/jquery-2.1.0.js"></script>
+		<script src="vendor/jcarousel/dist/jquery.jcarousel.js"></script>
 		<script src="assets/js/scripts.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
