the gallery freakin works

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Home</title>
 		<script src="assets/js/jquery-2.1.0.js"></script>
 		<script src="vendor/jcarousel/dist/jquery.jcarousel.js"></script>
+		<script src="vendor/jcarousel/dist/jquery.jcarousel.min.js"></script>
 		<script src="assets/js/scripts.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -24,6 +25,11 @@
 		<section class="main_content">
 			<section class="gallery">
 				<ul>
+					<li><img src="assets/images/awesome_car.jpg"/></li>
+					<li><img src="assets/images/awesome_car2.jpg"/></li>
+					<li><img src="assets/images/awesome_car.jpg"/></li>
+					<li><img src="assets/images/awesome_car2.jpg"/></li>
+					<li><img src="assets/images/awesome_car.jpg"/></li>
 					<li><img src="assets/images/awesome_car.jpg"/></li>
 					<li><img src="assets/images/awesome_car2.jpg"/></li>
 					<li><img src="assets/images/awesome_car.jpg"/></li>
