--- a/catalog.html
+++ b/catalog.html
@@ -25,11 +25,11 @@
 			<aside>
 				<h1>Hot Deals</h1>
 				<section>
-					<a href="#"><img src="#"></a>
+					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/></a>
 					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
 				</section>
 				<section>
-					<a href="#"><img src="#"></a>
+					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/></a>
 					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
 				</section>
 			</aside>
