saldkjf;aoiuvwjns;ljrwefas

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<li><img src="assets/images/CarPictures/2015-Nissan-GT-R-Nismo-300x200.jpg"/></li>
 					<li><img src="assets/images/CarPictures/M1A2-2-300x300.jpg"/></li>
 					<li><img src="assets/images/CarPictures/Mazda-RX71999.jpg"/></li>
+					<li id='empty'></li>
 				</ul>
 			</section>
 			<section class="marketing">
