the modal beginning

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Product Catalog</title>
 		<script src="assets/js/jquery-2.1.0.js"></script>
-		<script src="assets/js/scripts.js"></script>
+		<script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
+		<script src="assets/js/dialog.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/catalog.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -35,43 +36,43 @@
 			</aside>
 			<section>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/69corvettestingray.jpg"/></a>
+					<img src="assets/images/CarPictures/69corvettestingray.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/69dodgecharger.jpg"/></a>
+					<img src="assets/images/CarPictures/69dodgecharger.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/2013-sema-cruise-friday-night-70-ford-tonka-truck-.jpg"/></a>
+					<img src="assets/images/CarPictures/2013-sema-cruise-friday-night-70-ford-tonka-truck-.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/2013-srt-viper-300x250.jpg"/></a>
+					<img src="assets/images/CarPictures/2013-srt-viper-300x250.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/2015-Acura-NSX-1024x657-300x200.jpg"/></a>
+					<img src="assets/images/CarPictures/2015-Acura-NSX-1024x657-300x200.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/2015lexuslfa.jpg"/></a>
+					<img src="assets/images/CarPictures/2015lexuslfa.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/2015-Nissan-GT-R-Nismo-300x200.jpg"/></a>
+					<img src="assets/images/CarPictures/2015-Nissan-GT-R-Nismo-300x200.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/M1A2-2-300x300.jpg"/></a>
+					<img src="assets/images/CarPictures/M1A2-2-300x300.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/Mazda-RX71999.jpg"/></a>
+					<img src="assets/images/CarPictures/Mazda-RX71999.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 				<article>
-					<a href="details.html"><img src="assets/images/CarPictures/Nissan370.jpg"/></a>
+					<img src="assets/images/CarPictures/Nissan370.jpg"/>
 					<h3>Year Make Model Price</h3>
 				</article>
 			</section>
@@ -80,5 +81,12 @@
 		<footer>
 			<span>&copy;Josh & Kevin</span>
 		</footer>
+		
+		<section id="dialog" title ="Car Info">
+			<img src="#"/>
+			<h1>Car Name</h1>
+			<p>paragraph to the right of the picture.</p>
+			<p>paragraph underneath the picture and other paragraph</p>
+		</section>
 	</body>
 </html>
