--- a/details.html
+++ b/details.html
@@ -4,13 +4,14 @@
 		<title>Product Details</title>
 		<script src="assets/js/jquery-2.1.0.js"></script>
 		<script src="assets/js/scripts.js"></script>
+		<script src="assets/js/dialog.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<header>
 			
 		</header>
-		<section>
+		<section id="dialog">
 			<img src="#"/>
 			<h1>Car Name</h1>
 			<p>paragraph to the right of the picture.</p>
