It's goin down...

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="assets/js/jquery-2.1.0.js"></script>
 		<script src="vendor/jcarousel/dist/jquery.jcarousel.js"></script>
 		<script src="assets/js/scripts.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -36,11 +37,11 @@
 					<li id='empty'></li>
 				</ul>
 			</section>
+			<section id="map">
+				<p>map here</p>
+			</section>
 			<section class="marketing">
 				<p>text here</p>
-			</section>
-			<section class="map">
-				<p>map here</p>
 			</section>
 		</section>	
 		<footer>
