Stuff I forgot to commit

--- a/catalog.html
+++ b/catalog.html
@@ -83,10 +83,12 @@
 		</footer>
 		
 		<section id="dialog" title ="Car Info">
-			<img src="#"/>
-			<h1>Car Name</h1>
-			<p>paragraph to the right of the picture.</p>
-			<p>paragraph underneath the picture and other paragraph</p>
+			
+			
+			<img src="assets/images/CarPictures/Acura_NSX.JPG"/>
+			<section class="para"><h1>Car Name</h1>paragraph to the<br>paragraph to the </section>
+			
+			<p>paragraph underneath the picture and other paragraphparagraph underneath the picture and other paragraphparagraph underneath the picture and other paragraphparagraph underneath the picture and other paragraph</p>
 		</section>
 	</body>
 </html>
