--- a/details.html
+++ b/details.html
@@ -12,7 +12,7 @@
 			
 		</header>
 		<section id="dialog">
-			<img src="#"/>
+			<img src="assets/images/CarPictures/Acura_NSX.JPG"/>
 			<h1>Car Name</h1>
 			<p>paragraph to the right of the picture.</p>
 			<p>paragraph underneath the picture and other paragraph</p>
