Don't be afraid to commit.

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 				</ul>
 			</section>
 			<section id="map">
-				<p>map here</p>
 			</section>
 			<section class="marketing">
-				<p>text here</p>
+				<img src="assets/images/marketing.png" />
+				<br />
+				<img src="assets/images/visit.png" />				
 			</section>
 		</section>	
 		<footer>
