--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
 				</section>
 				<section>
-					<a href="#"><img src="assets/images/CarPictures/awesome_car2.jpg"></a>
+					<a href='#'><img src="assets/images/CarPictures/awesome_car2.jpg"></a>
 					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
 				</section>
 			</aside>
@@ -37,62 +37,30 @@
 				<section>
 					<h2>Please</h2>
 					<span>Leave us your information so we can get back to you!</span>
-					<ul class="form">
-						<li>
-							Name: <input>
-						</li>
-						<li>
-							Email: <input>
-						</li>
-						<li>
-							Phone Number: <input>
-						</li>
-						<li>
-							Street Adress: <input>
-						</li>
-						<li>
-							City: <input>
-						</li>
-						<li>
-							State: <input>
-						</li>
-						<li>
-							Zip Code: <input>
-						</li>
-						<li>
-							Message for us: <input>
-						</li>
-						<li>
-							<input type="button" value="submit"/>
-						</li>
-					</ul>
+					<form id='target'>
+						<ul>
+							<li>Name: <input type='text' /></li>
+							<li>Email: <input type='email' /></li>
+							<li>Phone Number: <input type='tel' /></li>
+							<li>Street Address: <input type='text' /></li>
+							<li>City: <input type='text' /></li>
+							<li>State: <input type='text' /></li>
+							<li>Zip Code: <input type='text' /></li>
+							<li>Message: <input type='text' /></li>
+							<li><input id='send' type='submit' value='send' /></li>
+						</ul>
+					</form>
 				</section>
 				<section>
 					<ul>
-						<li>
-							<h2>- Or -</h2>
-						</li>
-						<li>
-							<h2>Here's Our Info</h2>
-						</li>
-						<li>
-							Email: ouremail.com
-						</li>
-						<li>
-							Phone Number: 435-999-4354
-						</li>
-						<li>
-							Street Adress: Las Vegas
-						</li>
-						<li>
-							City: Nevada
-						</li>
-						<li>
-							State: 435 N Main St.
-						</li>
-						<li>
-							Zip Code: 43525
-						</li>
+						<li><h2>- Or -</h2></li>
+						<li><h2>Here's Our Info</h2></li>
+						<li>Email: ouremail.com</li>
+						<li>Phone Number: 435-999-4354</li>
+						<li>Street Adress: Las Vegas</li>
+						<li>City: Nevada</li>
+						<li>State: 435 N Main St.</li>
+						<li>Zip Code: 43525</li>
 					</ul>
 				</section>
 			</section>
