--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<section id="map">
 			</section>
 			<section class="marketing">
-				<img src="assets/images/marketing.png" />
+				<img src="assets/images/marketing2.png" />
 				<br />
 				<img src="assets/images/visit.png" />				
 			</section>
