--- a/catalog.html
+++ b/catalog.html
@@ -37,43 +37,43 @@
 			<section>
 				<article>
 					<img src="assets/images/CarPictures/2015-Acura-NSX-1024x657-300x200.jpg"/>
-					<h3>2015 Acura NSX Price</h3>
+					<h3>2015 Acura NSX <span class='price'>Price</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/69corvettestingray.jpg"/>
-					<h3>1969 Corvette Stingray $30,000</h3>
+					<h3>1969 Corvette Stingray <span class='price'>$30,000</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/69dodgecharger.jpg"/>
-					<h3>1969 Dodge Charger $45,000</h3>
+					<h3>1969 Dodge Charger <span class='price'>$45,000</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/2013-sema-cruise-friday-night-70-ford-tonka-truck-.jpg"/>
-					<h3>1970 Ford Tonka Truck $35,000</h3>
+					<h3>1970 Ford Tonka Truck <span class='price'>$35,000</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/2013-srt-viper-300x250.jpg"/>
-					<h3>2013 Dodge Viper SRT $54,999</h3>
+					<h3>2013 Dodge Viper SRT <span class='price'>$54,999</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/2015lexuslfa.jpg"/>
-					<h3>2015 Lexus LFA Price</h3>
+					<h3>2015 Lexus LFA <span class='price'>Price</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/2015-Nissan-GT-R-Nismo-300x200.jpg"/>
-					<h3>2015 Nissan GTR Price</h3>
+					<h3>2015 Nissan GTR <span class='price'>Price</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/M1A2-2-300x300.jpg"/>
-					<h3>M1 Abrams Battletank $4.2M</h3>
+					<h3>M1 Abrams Battletank <span class='price'>$4.2M</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/Mazda-RX71999.jpg"/>
-					<h3>1999 Mazda RX-7 $25</h3>
+					<h3>1999 Mazda RX-7 <span class='price'>$25</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/Nissan370.jpg"/>
-					<h3>2014 Nissan 370Z Price</h3>
+					<h3>2014 Nissan 370Z <span class='price'>Price</span></h3>
 				</article>
 			</section>
 			
