--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 		<section class="main_content">
 			<aside>
 				<h1>Testimonials</h1>
-					<p>"Ese vato, estos autos son chevres." <br />- Alberto Einsteinez</p>
+					<p>"The prices are a little high, but I'm sure the taxpayers won't mind." <br />- Barack Obama</p>
 
 					<p>"I like cars...like 'em a lot!" <br />- Steve</p>
 					
