--- a/catalog.html
+++ b/catalog.html
@@ -27,17 +27,17 @@
 				<h1>Hot Deals</h1>
 				<section>
 					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/></a>
-					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+					<p>All time low price!<br>AM/FM Cassette Player Included!</p>
 				</section>
 				<section>
 					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/></a>
-					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+					<p>All time low price!<br>Almost Runs!</p>
 				</section>
 			</aside>
 			<section>
 				<article>
 					<img src="assets/images/CarPictures/2015-Acura-NSX-1024x657-300x200.jpg"/>
-					<h3>2015 Acura NSX <span class='price'>Price</span></h3>
+					<h3>2015 Acura NSX <span class='price'>$110,000</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/69corvettestingray.jpg"/>
@@ -57,11 +57,11 @@
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/2015lexuslfa.jpg"/>
-					<h3>2015 Lexus LFA <span class='price'>Price</span></h3>
+					<h3>2015 Lexus LFA <span class='price'>$120,000</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/2015-Nissan-GT-R-Nismo-300x200.jpg"/>
-					<h3>2015 Nissan GTR <span class='price'>Price</span></h3>
+					<h3>2015 Nissan GTR <span class='price'>$101,770</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/M1A2-2-300x300.jpg"/>
@@ -69,11 +69,11 @@
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/Mazda-RX71999.jpg"/>
-					<h3>1999 Mazda RX-7 <span class='price'>$25</span></h3>
+					<h3>1999 Mazda RX-7 <span class='price'>$2,500</span></h3>
 				</article>
 				<article>
 					<img src="assets/images/CarPictures/Nissan370.jpg"/>
-					<h3>2014 Nissan 370Z <span class='price'>Price</span></h3>
+					<h3>2014 Nissan 370Z <span class='price'>$29,990</span></h3>
 				</article>
 			</section>
 			
@@ -83,9 +83,9 @@
 		</footer>
 		
 		<section id="dialog" title ="Car Info">
-			
 			<img src="assets/images/CarPictures/Acura_NSX.JPG"/>
-			<section class="para"><h1>Car Name</h1>paragraph to the<br>paragraph to the </section>
+			<section class="para"><h1>2015 Acura NSX</h1><p>Mid-mounted, direct-injected V-6
+				<br />Dual-clutch, paddle-shifted automatic</p></section>
 			
 			<p>paragraph underneath the picture and other paragraphparagraph underneath the picture and other paragraphparagraph underneath the picture and other paragraphparagraph underneath the picture and other paragraph</p>
 		</section>
