--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,12 @@
 			<aside>
 				<h1>Hot Deals</h1>
 				<section>
-					<a href="#"><img src="assets/images/CarPictures/awesome_car.jpg"></a>
-					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/></a>
+					<p>All time low price!<br>AM/FM Cassette Player Included!</p>
 				</section>
 				<section>
-					<a href='#'><img src="assets/images/CarPictures/awesome_car2.jpg"></a>
-					<p>All time low price!<br>Sweet Deal on this Stupid Subaru!</p>
+					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/></a>
+					<p>All time low price!<br>Almost Runs!</p>
 				</section>
 			</aside>
 			<section>
