borders on the thingies

--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,10 @@
 				<h1>Contact Us</h1>
 				<section>
 					<h2>Please</h2>
-					<span>Leave us your information so we can get back to you!</span>
+					
 					<form id='target'>
 						<ul>
+							<span>Leave us your information so we can get back to you!<br>------</span>
 							<li>Name: <input type='text' /></li>
 							<li>Email: <input type='email' /></li>
 							<li>Phone Number: <input type='tel' /></li>
@@ -55,12 +56,14 @@
 					<ul>
 						<li><h2>- Or -</h2></li>
 						<li><h2>Here's Our Info</h2></li>
+						<form>
 						<li>Email: ouremail.com</li>
 						<li>Phone Number: 435-999-4354</li>
 						<li>Street Adress: Las Vegas</li>
 						<li>City: Nevada</li>
 						<li>State: 435 N Main St.</li>
 						<li>Zip Code: 43525</li>
+						</form>
 					</ul>
 				</section>
 			</section>
