--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>About Us</title>
 		<script src="assets/js/jquery-2.1.0.js"></script>
+		<script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
+		<script src="assets/js/jquery.ui.core.js"></script>
+		<script src="assets/js/jquery.ui.widget.js"></script>
+		<script src="assets/js/jquery.ui.accordion.js"></script>
 		<script src="assets/js/scripts.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -30,15 +34,15 @@
 					<p>"Thanks to jk, I don't have to live in a van down by the river!" <br />- Chris Farley</p>
 
 			</aside>
+			<h1>About Us</h1>
 			<section class="us">
-				<h1>About Us</h1>
+				<h2>Josh</h2>
 				<section>
-					<h2>Josh</h2>
 					<img src="assets/images/josh2.jpg"/>
 					<span>ELLINGTON SMASH!!!</span>
 				</section>
+				<h2>Kevin</h2>
 				<section>
-					<h2>Kevin</h2>
 					<img src="assets/images/kevin.gif"/>
 					<span>"_______ is hard."</span>
 				</section>
