--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<script src="assets/js/jquery.ui.core.js"></script>
 		<script src="assets/js/jquery.ui.widget.js"></script>
 		<script src="assets/js/jquery.ui.accordion.js"></script>
-		<script src="assets/js/scripts.js"></script>
+		<script src="assets/js/about.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
