--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 						<li><h2>- Or -</h2></li>
 						<li><h2>Here's Our Info</h2></li>
 						<form>
-						<li>Email: ouremail.com</li>
+						<li>Email: jk@jkauto.com</li>
 						<li>Phone Number: 435-999-4354</li>
 						<li>Street Adress: Las Vegas</li>
 						<li>City: Nevada</li>
@@ -70,7 +70,13 @@
 			
 		</section>
 		<footer>
+			<section class="social">
+				<a href="http://www.facebook.com/jk_auto_sales" title="facebook"><img src="assets/images/face.png" /></a>
+				<a href="http://www.twitter.com/jkauto" title="twitter"><img src="assets/images/twit.png" /></a>
+				<a href="http://www.youtube.com/user/jk_auto_sales" title="youtube"><img src="assets/images/you.png" /></a>
+			</section>
 			<span>&copy;Josh & Kevin</span>
+			<a href="mailto:jk@jkauto.com"><img class="mail" src="assets/images/mail.png" /></a>
 		</footer>
 	</body>
 </html>
