--- a/about.html
+++ b/about.html
@@ -49,7 +49,13 @@
 			</section>
 		</section>
 		<footer>
+			<section class="social">
+				<a href="http://www.facebook.com/jk_auto_sales" title="facebook"><img src="assets/images/face.png" /></a>
+				<a href="http://www.twitter.com/jkauto" title="twitter"><img src="assets/images/twit.png" /></a>
+				<a href="http://www.youtube.com/user/jk_auto_sales" title="youtube"><img src="assets/images/you.png" /></a>
+			</section>
 			<span>&copy;Josh & Kevin</span>
+			<a href="mailto:jk@jkauto.com"><img class="mail" src="assets/images/mail.png" /></a>
 		</footer>
 	</body>
 </html>
