Click on my thingy

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 		<title>Contact Us</title>
 		<script src="assets/js/jquery-2.1.0.js"></script>
 		<script src="assets/js/scripts.js"></script>
+		<script src="assets/js/javascript.js"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -37,14 +38,15 @@
 				<form id='target'>
 					<ul>
 						<span>Leave us your information so we can get back to you!<br>------</span>
-						<li>Name: <input type='text' /></li>
-						<li>Email: <input type='email' /></li>
+						<li>*Name: <input id='name' type='text' /></li>
+						<li>*Email: <input id='email' type='email' /></li>
 						<li>Phone Number: <input type='tel' /></li>
 						<li>Street Address: <input type='text' /></li>
 						<li>City: <input type='text' /></li>
 						<li>State: <input type='text' /></li>
 						<li>Zip Code: <input type='text' /></li>
 						<li>Message: <input type='text' /></li>
+						<li>*Required Field</li>
 						<li><input id='send' type='submit' value='send' /></li>
 					</ul>
 				</form>
