super a lot of typing and stuff

--- a/catalog.html
+++ b/catalog.html
@@ -90,10 +90,18 @@
 		
 		<section id="dialog" title ="Car Info">
 			<img src="assets/images/CarPictures/Acura_NSX.JPG"/>
-			<section class="para"><h1>2015 Acura NSX</h1><p>Mid-mounted, direct-injected V-6
-				<br />Dual-clutch, paddle-shifted automatic</p></section>
-			
-			<p>paragraph underneath the picture and other paragraphparagraph underneath the picture and other paragraphparagraph underneath the picture and other paragraphparagraph underneath the picture and other paragraph</p>
+			<section class="para">
+			<h1>2015 Acura NSX</h1><p>Mid-mounted, direct-injected V-6
+			<br />Dual-clutch, paddle-shifted automatic</p></section>
+			<section class="accordion">
+			<h3>Engine</h3><p>3.8-liter twin-turbocharged 24-valve V6</p>
+			<h3>Horsepower</h3><p>545 horsepower @ 6,400 rpm</p>
+			<h3>Torque</h3><p>463 lb-ft of torque @ 3,200-5,800 rpm</p>
+			<h3>Cylinder bore x stroke</h3><p>95.5 x 88.4 mm</p>
+			<h3>Compression ratio</h3><p>9.0:1</p>
+			<h3>Top speed</h3><p>196 mph</p>
+			<h3>Maximum engine speed</h3><p>7,000 rpm</p>
+			</section>
 		</section>
 	</body>
 </html>
