--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
 			<aside>
 				<h1>Hot Deals</h1>
 				<section>
-					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/></a>
+					<img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/>
 					<p>All time low price!<br>AM/FM Cassette Player Included!</p>
 				</section>
 				<section>
