--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
 			<aside>
 				<h1>Hot Deals</h1>
 				<section>
-					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/></a>
+					<img class="aside" src="assets/images/CarPictures/awesome_car.jpg"/>
 					<p>All time low price!<br>AM/FM Cassette Player Included!</p>
 				</section>
 				<section>
-					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/></a>
+					<img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/>
 					<p>All time low price!<br>Almost Runs!</p>
 				</section>
 			</aside>
