Really fixed stuff.

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
 					<p>All time low price!<br>AM/FM Cassette Player Included!</p>
 				</section>
 				<section>
-					<a href="#"><img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/></a>
+					<img class="aside" src="assets/images/CarPictures/awesome_car2.jpg"/>
 					<p>All time low price!<br>Almost Runs!</p>
 				</section>
 			</aside>
